Shortest is pending

--- a/template/index.html
+++ b/template/index.html
@@ -20,7 +20,7 @@
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="searchDropdown">
               <li><a class="dropdown-item" href="{% url 'nthnode' %}">Nth Node</a></li>
               <li><a class="dropdown-item" href="{% url 'longest_route' %}">Longest Node</a></li>
-              <li><a class="dropdown-item" href="#">Shortest Node</a></li>
+              <li><a class="dropdown-item" href="{% url 'distancebtwn' %}">Shortest Node</a></li>
             </ul>
           </div>
         </div>
